--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -24,7 +24,7 @@
                 <div class="col-lg-6 col-md-8  text-center">
                     <div class="user-ath-logo">
                         <a href="#">
-                            <img src="images2/logo2.png"  srcset="images/logo-sm2x.png 2x" alt="icon">
+                            <img src="../assets/images/logo-white.png" height="80px" alt="icon">
                         </a>
                     </div>
                     <div class="user-ath-box">
@@ -53,8 +53,8 @@
                             <div class="gaps"></div>
                             <div class="d-flex justify-content-between align-items-center">
                             
-                                <button class="btn btn-common light-green" id="cancel">Cancel</button>
-                                <button type="submit" id="sbmt_pass" class="btn btn-common light-green">Update</button>
+                                <button class="btn btn-common light-green btn-primary" height="80px" alt="icon">Cancel</button>
+                                <button type="submit" id="sbmt_pass" class="btn btn-common light-green btn-primary">Update</button>
                             </div>
                         </form>
                     </div>
