--- a/views/verify-private-key.ejs
+++ b/views/verify-private-key.ejs
@@ -21,7 +21,8 @@
 
                             <h4 class="green-heading">Please enter your Private Key below to <br> Confirm your wallet.</h4>
 
-                          
+     
+                           
                             <div class="input-group input-dash copy-id-dash enter-passphrase">
                               <input class="form-control" type="text"  name="passphrase" placeholder="Please enter Private Key to create wallet" id="passphrase" data-rule-required="true"  data-msg-required="Please enter Private Key." autocomplete="off">
                               <input type="hidden" value="<%=user_passphrase %>" name="check_key" id="check_key">
@@ -33,7 +34,7 @@
                                 <!-- <span class="float-right wow slideInRight"><a href="/Create-wallet">Create a new wallet</a></span> -->
                               </div>
                           <div class="clearfix note-line">
-                            <span class=""><b><i class="fa fa-info-circle"></i> Make sure you keep the Private Key safe. If you loose your passphrase, your account can't be restored and all your funds will be last.</b></span>
+                            <span class=""><b><i class="fa fa-info-circle"></i>  Make sure you keep the Private Key safe. If you lose your private key, your account / funds would be locked and can't be restored</b></span>
                           </div>
 
                           <div class="text-center">
