--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,7 +107,7 @@
 <header class="header-main index-header">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light p-2">
-            <a class="navbar-brand logo" href="">
+            <a class="navbar-brand logo" href="index.ejs">
                 
                 <h1><img src="../assets/images/logo-white.png" class="color-logo" alt=" Logo"> &nbsp; ETHEREUM BUCKEYE TOKEN</h1>
                 
@@ -456,7 +456,7 @@
                             <li>$2,500 donated to charity</li>
                         </ul>
                     </div>
-                    <div class="ps-bot">
+                    <div class="ps-top">
                         <p>Oct-Dec 2021</p>
                     </div>
                     <span class="ps-sp-bot">
