--- a/views/verify-account.ejs
+++ b/views/verify-account.ejs
@@ -24,7 +24,7 @@
                 <div class="col-lg-6 col-md-8 text-center">
                     <div class="user-ath-logo">
                         <a href="#">
-                            <img src="images2/logo2.png"  srcset="images/logo-sm2x.png 2x" alt="icon">
+                            <img src="../assets/images/logo-white.png" height="80px" alt="icon">
                         </a>
                     </div>
                     <div class="user-ath-box">
