--- a/views/index.ejs
+++ b/views/index.ejs
@@ -438,7 +438,7 @@
                         </ul>
                     </div>
                     <div class="ps-top">
-                        <p>July-Sep 2021</p>
+                        <p>July <br>2021</p>
                     </div>
                     <span class="ps-sp-bot">
                         <img src="../assets/images/logo-white.png" class="img-fluid">
@@ -457,7 +457,7 @@
                         </ul>
                     </div>
                     <div class="ps-top">
-                        <p>Oct-Dec 2021</p>
+                        <p>August 2021</p>
                     </div>
                     <span class="ps-sp-bot">
                         <img src="../assets/images/logo-white.png" class="img-fluid">
@@ -474,7 +474,7 @@
                         </ul>
                     </div>
                     <div class="ps-top">
-                        <p>Jan-Mar 2022</p>
+                        <p>September 2021</p>
                     </div>
                     <span class="ps-sp-bot">
                         <img src="../assets/images/logo-white.png" class="img-fluid">
@@ -638,10 +638,10 @@
                        <div class="input-group">
                           <input type="text" class="form-control" placeholder="Your Email">
                           <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button" >
-                                <a class="nav-link sign-up-btn" href="signup">
+                            <button class="btn btn-outline-secondary" type="button" onclick="show_alert()">
+                                
                                     Subscribe
-                                    </a>
+                                  
                                                           
                             </button>
                           </div>
@@ -800,6 +800,14 @@
                   window.location.href=main_url;
                  }
             </script>
+               <script>
+                function show_alert() {
+                  if (!confirm("Thankyou!, You have been subscribed for our news letters. Stay Tuned!!!")) {
+                    return false;
+                  }
+                  this.form.submit();
+                }
+              </script>
     </body>
 </html>
 
