--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -160,7 +160,7 @@
                                                   <li>The goal of the EBT Community is to establish a globally represented  community, that supports diverse projects and helps each other. </li>
                                                   <li>
                                                     One big aspect is the acquisition of land worldwide, either to protect the environment or to create areas where everyone in the Community can live free of charge or take holidays, in accordance with the laws of the respective countries. Thus, we also want to promote alternative lifestyles.
-                                                    Check out our marketplace now! <a href="">The $EBT</a></li>
+                                                    Get 1,350,000,000EBT for 1$ at 35% discount</a></li>
                                                   
                                               </ul>
                                               
