--- a/views/index.ejs
+++ b/views/index.ejs
@@ -218,7 +218,7 @@
                         <img src="../assets/images/banner.png" class="img-fluid">
                          <div class="banner-inner-text">
                              <div>
-                                  <h2>Rate 1$ = 1,000,000,000EBT​:<br /> "THE PEOPLE'S COIN"</h2>
+                                  <h2>Rate 1EBT = 0.00000001$:<br /> "THE PEOPLE'S COIN"</h2>
                                   <div>
                                     <div class="timer">
                                                 <div id="daysTicker" class="countdown"></div>
@@ -237,7 +237,7 @@
                                                 <div class="counter-text">SECONDS</div>
                                             </div>
                                     </div>
-				    <h2>Get 1,350,000,000EBT for 1$ at 35% discount</h2>
+				    <h2>Buy now and get 35% discount at 1EBT = 0.00000065$</h2>
                                   <p>Ethereum Buckeye Token was formed by a group of local advocates in Cleveland Ohio with the intention of being a charitable token of choice on the ERC-20 black chain! We began as a small organic idea and have formed into a group large enough to advocate for EBT’s acceptance nationwide. “EBT ACCEPTED HERE” will soon be in businesses and organizations all over North America.</p>
                                   <div class="banner-btn">
                                     <a href="https://t.me/ETHEREUMBUCKEYETOKEN" target="_blank" class="purple-btn-index"><i class="fab fa-telegram-plane"></i> Join Us Now</a>
