--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -70,7 +70,7 @@
                                     <div class="input-group">
                                       <input type="text" class="form-control" data-rule-number="true" onkeyup="multiply()"  name="ebt" id="ebt" data-rule-min="1" data-msg-min="You have to buy minimum 1 $EBT." data-rule-required="true" data-msg-required="Please enter value in digit." aria-describedby="basic-addon4" onchange="multiby(this.value,`<%=ebt%>`)" required>
                                       <div class="input-group-append">
-                                        <span class="input-group-text" id="basic-addon4">$EBT</span>
+                                        <span class="input-group-text" id="basic-addon4">USD</span>
                                       </div>
                                     </div>
                           
@@ -98,7 +98,7 @@
                       </div>
                   </div>
                   <input type="hidden" value="<%=ebt%>" name="rate_per_ebt" id="rate_per_ebteth">
-                  <p class="font-italic value-coin-line mx-1 mb-2">  1$ = 1,000,000,000EBT</p>
+                  <p class="font-italic value-coin-line mx-1 mb-2">1EBT = <%=ebt%> </p>
               <!-- <p class="font-italic value-coin-line mt-3 mx-1 mb-2"> <b>1 TOKEN = 23 TRX</b></p> -->
                  <div class="col-md-12 p-0">
                     <div id="tran_wallet">
@@ -226,7 +226,7 @@
   </script>
   <script>
     function multiby(val,nem){
-      let n = parseFloat(val)*parseFloat(nem);
+      let n = parseFloat(val)*parseFloat(nem)*0.0000000065;
       document.getElementById("eth").value=n;
     };
   </script>
