--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -226,7 +226,7 @@
   </script>
   <script>
     function multiby(val,nem){
-      let n = parseFloat(val)*parseFloat(nem)*0.0000000065;
+      let n = parseFloat(val)*parseFloat(nem);
       document.getElementById("eth").value=n;
     };
   </script>
