chnage in ebt value

--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -98,7 +98,7 @@
                       </div>
                   </div>
                   <input type="hidden" value="<%=ebt%>" name="rate_per_ebt" id="rate_per_ebteth">
-                  <p class="font-italic value-coin-line mx-1 mb-2">1EBT = <%=ebt%> </p>
+                  <p class="font-italic value-coin-line mx-1 mb-2">1EBT = <%=tebt%> </p>
               <!-- <p class="font-italic value-coin-line mt-3 mx-1 mb-2"> <b>1 TOKEN = 23 TRX</b></p> -->
                  <div class="col-md-12 p-0">
                     <div id="tran_wallet">
