--- a/views/admin/front-admin/layout/header.ejs
+++ b/views/admin/front-admin/layout/header.ejs
@@ -27,8 +27,8 @@
       <!-- partial:partials/_navbar.html -->
       <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-          <a class="navbar-brand brand-logo" href="main-dashboard.ejs"><img src="assets/images/logo-white.png" alt="logo" /></a>
-          <a class="navbar-brand brand-logo-mini" href="main-dashboard.ejs"><img src="assets/images/logo-white.png" alt="logo" /></a>
+          <a class="navbar-brand brand-logo" href="/main-dashboard"><img src="assets/images/logo-white.png" alt="logo" /></a>
+          <a class="navbar-brand brand-logo-mini" href="/main-dashboard"><img src="assets/images/logo-white.png" alt="logo" /></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -51,7 +51,7 @@
                   <span class="availability-status online"></span>
                 </div>
                 <div class="nav-profile-text">
-                  <p class="mb-1">John</p>
+                  <p class="mb-1"><%= session.user_name%></p>
                 </div>
               </a>
               <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
@@ -83,8 +83,8 @@
                   <!--change to offline or busy as needed-->
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                  <span class="font-weight-bold mb-2">John</span>
-                  <span class="text-secondary text-small">Project Manager</span>
+                  <span class="font-weight-bold mb-2"><%= session.user_name%></span>
+                  <span class="text-secondary text-small"><%= session.user_type%></span>
                 </div>
                <!--  <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i> -->
               </a>
