change in values of ebt rate and usd to ebt change

--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -46,7 +46,7 @@
                                      <ol class="text-left four-step-list">
                                         <li>Calculate how much $EBTs you want to buy.</li>
                                         <li>Copy/Scan the displayed address</li>
-                                        <li>Send your TRX to that address. You may send it right from your exchange.</li>
+                                        <li>Send your  ETH/BNB/BTC/USDT  to that address. You may send it right from your exchange.</li>
                                         <li>Upon transaction confirmation, please fill in your transaction details (Bitcoin Wallet address, Ethereum Wallet address and transaction ID) in the form. We need Ethereum wallet address so that we can transfer $EBT coins to you.</li>
                                         <li>Our team will verify the transaction and will send your $EBT tokens within 48 hours which will be reflected in your wallet.</li>
                                     </ol>
@@ -70,7 +70,7 @@
                                     <div class="input-group">
                                       <input type="text" class="form-control" data-rule-number="true" onkeyup="multiply()"  name="ebt" id="ebt" data-rule-min="1" data-msg-min="You have to buy minimum 1 $EBT." data-rule-required="true" data-msg-required="Please enter value in digit." aria-describedby="basic-addon4" onchange="multiby(this.value,`<%=ebt%>`)" required>
                                       <div class="input-group-append">
-                                        <span class="input-group-text" id="basic-addon4">USD</span>
+                                        <span class="input-group-text" id="basic-addon4">EBT</span>
                                       </div>
                                     </div>
                           
