--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -277,7 +277,7 @@
         // alert(currencyType);
         $.ajax({
           type: 'post',
-          url: 'http://localhost:443/currency-value',
+          url: 'https://ebtico.com/currency-value',
           data: { currencyType: currencyType },
           success: function (res) {
             console.log(res);
