--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -77,7 +77,7 @@
                           <input type="text" class="form-control" data-rule-number="true" name="ebt" id="ebt"
                             data-rule-min="1" data-msg-min="You have to buy minimum 1 $EBT." data-rule-required="true"
                             data-msg-required="Please enter value in digit." aria-describedby="basic-addon4"
-                            onkeyup="multiby(this.value,`<%=ebt*0.65%>`)" required>
+                            onkeyup="multiby(this.value,`<%=ebt%>`)" required>
                           <div class="input-group-append">
                             <span class="input-group-text" id="basic-addon4">EBT</span>
                           </div>
