conversation rate change

--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -79,7 +79,7 @@
                             data-msg-required="Please enter value in digit." aria-describedby="basic-addon4"
                             onkeyup="multiby(this.value,`<%=ebt%>`)" required>
                           <div class="input-group-append">
-                            <span class="input-group-text" id="basic-addon4">EBT</span>
+                            <span class="input-group-text" id="basic-addon4">USD</span>
                           </div>
                         </div>
                         <input type="hidden" name="currencyValue" id="currencyValue">
@@ -108,9 +108,13 @@
                 </div>
               </div>
               <input type="hidden" value="<%=ebt%>" name="rate_per_ebt" id="rate_per_ebteth">
-              <p class="font-italic value-coin-line mx-1 mb-2">1EBT = <%=ebt*0.65%>
+             
               <p  class="">1EBT = 0.0000000065$</p>  
-              </p>
+
+              <p class="font-italic value-coin-line mx-1 mb-2"id="total_ebt"> </p>
+              <p class="font-italic value-coin-line mx-1 mb-2"id="total_amount"> </p>
+
+
               <!-- <p class="font-italic value-coin-line mt-3 mx-1 mb-2"> <b>1 TOKEN = 23 TRX</b></p> -->
               <div class="col-md-12 p-0">
                 <div id="tran_wallet">
@@ -249,7 +253,19 @@
         let rate = $("#currencyValue").val();
         // alert(rate);
         let n = parseFloat(val) * parseFloat(nem);
+
+        let total=parseFloat(val)*153846153.846;
+
+        let amount=total*rate;
+
         document.getElementById("eth").value = n;
+
+        document.getElementById("total_ebt").value = total;
+
+        document.getElementById("amount_total").value = total;
+
+
+
       };
     </script>
 
