--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -264,7 +264,8 @@
 
         document.getElementById("amount_total").value = total;
 
-
+        console.log(total);
+        console.log(amount);
 
       };
     </script>
