--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -260,9 +260,9 @@
 
         document.getElementById("eth").value = n;
 
-        document.getElementById("total_ebt").value = total;
+        $("#total_ebt").val(total);
 
-        document.getElementById("amount_total").value = total;
+        $("#amount_total").val(amount);
 
         console.log(total);
         console.log(amount);
