--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -220,7 +220,11 @@
     </div>
   </section>
 
-
+<style>
+  span#basic-addon-curr {
+    text-transform: uppercase;
+}
+</style>
 
 
   <%- include('footer') %>
