--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -129,7 +129,7 @@
                     </div> -->
                   <div class="form-group">
                     <div class="row">
-                      <label class="control-label col-sm-5">Client Wallet Address<span
+                      <label class="control-label col-sm-5">EBT Wallet Address<span
                           style="color:red;">*</span></label>
                       <!-- <div class="col-sm-6">
                         <input type="text" class="form-control secure" value="0x0296b77A92Ee270b8a0b157Cc744E9f102af6C51" id="eth_wallet_address" name="eth_wallet_address" data-rule-required="true" data-msg-required="Please enter Ethereum Wallet Address." readonly="" >
@@ -263,7 +263,7 @@
         let amount=total*rate;
 
         document.getElementById("eth").value = n;
-        document.getElementById("total_ebt").innerHTML=total;
+        document.getElementById("total_ebt").innerHTML="Toatal EBT you get"+total;
        // document.getElementById("total_amount").innerHTML=amount;
 
         //$("#total_ebt").val(total);
@@ -314,4 +314,8 @@
         });
 
       }
+
+      window.onload = function() {
+        changeCurrency(currencyType);
+      };
     </script>
