--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -263,7 +263,7 @@
         let amount=total*rate;
 
         document.getElementById("eth").value = n;
-        document.getElementById("total_ebt").innerHTML="Toatal EBT you get"+total;
+        document.getElementById("total_ebt").innerHTML="Total EBT you will get="+total;
        // document.getElementById("total_amount").innerHTML=amount;
 
         //$("#total_ebt").val(total);
@@ -296,7 +296,9 @@
       }
     </script>
     <script>
-
+       window.onload = function() {
+        changeCurrency();
+      };
       function changeCurrency(currencyType) {
         // alert(currencyType);
         $.ajax({
@@ -315,7 +317,5 @@
 
       }
 
-      window.onload = function() {
-        changeCurrency(currencyType);
-      };
+     
     </script>
