--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -24,6 +24,7 @@
                       <select class="form-control"
                         style="box-shadow: none;outline: none;border: 1px solid #ddd !important;"
                         onchange="changeCurrency(this.value);">
+                        <option value="">Select Coin</option>
                         <option value="eth">ETH</option>
                         <option value="bnb">BNB</option>
                         <option value="usdt">USDT</option>
