--- a/views/index.ejs
+++ b/views/index.ejs
@@ -182,7 +182,7 @@
     <header class="header-main index-header">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light p-2">
-                <a class="navbar-brand logo" href="index.ejs">
+                <a class="navbar-brand logo" href="/">
 
                     <h1><img src="../assets/images/logo-white.png" class="color-logo" alt=" Logo"> &nbsp; ETHEREUM
                         BUCKEYE TOKEN</h1>
