color change in select coin

--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -22,7 +22,7 @@
                     <h6>Coin</h6>
                     <div class="form-group m-0">
                       <select class="form-control"
-                        style="box-shadow: none;outline: none;border: 1px solid #ddd !important;"
+                        style="box-shadow: none;outline: none;border: 1px solid #ddd !important;background-color: transparent !important;"
                         onchange="changeCurrency(this.value);">
                         <option value="">Select Coin</option>
                         <option value="eth">ETH</option>
