--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -225,6 +225,10 @@
   span#basic-addon-curr {
     text-transform: uppercase;
 }
+.nice-select.open .list:hover {
+    width: 100%;
+    background: #000 !important;
+}
 </style>
 
 
