--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -315,6 +315,7 @@
             console.log(res);
             // alert(res.value);
             $("#currencyValue").val(res.value);
+            document.getElementById("eth").value = 0;
 
              document.getElementById("basic-addon-curr").innerHTML=currencyType;
 
