eth auto change

--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -316,6 +316,7 @@
             // alert(res.value);
             $("#currencyValue").val(res.value);
             document.getElementById("ebt").value = 0;
+            document.getElementById("eth").value = 0;
 
              document.getElementById("basic-addon-curr").innerHTML=currencyType;
 
