--- a/views/dash-private-key.ejs
+++ b/views/dash-private-key.ejs
@@ -33,7 +33,7 @@
                           </div>
                         <div class="checkbox">
                           <label>
-                            <input type="checkbox" value="">
+                            <input type="checkbox" value="" required>
                             <span class="cr"><i class="fa fa-check cr-icon"></i></span>
                             I agree with <a href="/terms-condition">terms and conditions</a> of $EBT.
                           </label>
