--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -72,13 +72,13 @@
                           <div class="col-md-6">
                              <div class="form-group">
                               <label >Full Name</label>
-                              <input name="name" type="text" class="form-control" placeholder="Name">
+                              <input name="name" type="text" class="form-control" placeholder="Name" required>
                             </div>
                           </div>
                           <div class="col-md-6">
                              <div class="form-group">
                               <label >Email address</label>
-                              <input name="email" type="email" class="form-control" placeholder="yourmail@gmail.com">
+                              <input name="email" type="email" class="form-control" placeholder="yourmail@gmail.com" required>
                             </div>
                           </div>
                           </div>
@@ -118,30 +118,29 @@
                             <div class="col-md-6">
                               <div class="form-group">
                                 <label>Password</label>
-                                <input name="password" type="password" class="form-control" placeholder="*********">
+                                <input name="password" type="password" class="form-control" placeholder="*********" required>
                               </div>
                             </div>
                             <div class="col-md-6">
                                <div class="form-group">
                                   <label>Confirm Password</label>
-                                  <input name="conf_pass" type="password" class="form-control" placeholder="*********">
+                                  <input name="conf_pass" type="password" class="form-control" placeholder="*********" required>
                                 </div>
                             </div>
                           </div>
 
-
+<!-- 
                           <div class="row">
     
                         <div class="col-md-6">
                        <div class="form-group">
                         <label >Referral Code</label>
-                        <!-- <input type="text" class="form-control" placeholder="xyz123"> -->
-                        <input type="text" name="ref_link" value="<%=ref_link %>" class="form-control"
+                         <input type="text" name="ref_link" value="<%=ref_link %>" class="form-control"
                           placeholder="Enter Referral Code">
                       </div>
                       </div>
 
-                    </div>
+                    </div> -->
                       
                      
                       
