--- a/views/uheader.ejs
+++ b/views/uheader.ejs
@@ -89,12 +89,12 @@
             </li>
           
              
-              <li class="nav-item">
+              <!-- <li class="nav-item">
               <a class="nav-link" href="/referral-table">
                 <span class="menu-title">Referral</span>
                 <i class="mdi mdi-cash menu-icon"></i>
               </a>
-            </li>
+            </li> -->
 
                <li class="nav-item">
             <a class="nav-link" href="/profile">
