--- a/views/admin/front-admin/header.ejs
+++ b/views/admin/front-admin/header.ejs
@@ -61,7 +61,7 @@
                 <a class="dropdown-item" href="/change-password">
                   <i class="mdi mdi-lock-reset mr-2"></i> Change Password</a>
                  
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="/logout">
                   <i class="mdi mdi-power mr-2"></i> Logout </a>
               </div>
             </li>
