--- a/views/admin/front-admin/main-dashboard.ejs
+++ b/views/admin/front-admin/main-dashboard.ejs
@@ -25,7 +25,7 @@
                    <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
                     <img src="/admin_assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
-                    <h4 class="font-weight-normal mb-3">$EBT sold this month 
+                    <h4 class="font-weight-normal mb-3">$EBT Balance of Admin
                     </h4>
                     <img src="/admin_assets/images/buy-coin.png" class="img-fluid icon-img">
 
