--- a/views/buy-coin.ejs
+++ b/views/buy-coin.ejs
@@ -70,10 +70,10 @@
               <div class="form-body">
                 <div class="row">
                   <div class="col-12 col-lg-5 col-md-12">
-                    <div class="form-group row">
-                      <label class="col-2 label-control" for="projectinput1">BUY<span
+                    <div class="form-group row align-items-center">
+                      <label class="col-4 pr-0 mb-0 label-control" for="projectinput1">BUY<span
                           style="color:red;">*</span></label>
-                      <fieldset class="col-10">
+                      <fieldset class="col-8 pl-0">
                         <div class="input-group">
                           <input type="text" class="form-control" data-rule-number="true" name="ebt" id="ebt"
                             data-rule-min="1" data-msg-min="You have to buy minimum 1 $EBT." data-rule-required="true"
